@@ -1,9 +1,8 @@
-- Add &printf primitive and printf builtin.
-  - Need a function that consumes arguments from list
-    based upon format spec. Varargs won't fly.
-    - Use libffi w/ strtod() and strtol().
-- Add relop tests.
+- Document builtin printf.
 - Add job control (SIGTSTP, fg, bg, disown).
-- Add examples.
 - Add tests.
+  - relops
+  - printf
+  - Extend existing suites.
+- Add examples.
 - Get xsdebug working.
