@@ -2805,6 +2805,7 @@ Those primitives, and the functions to which they are bound, are
 .ft \*(Cf
 execfailure	%exec-failure
 limit	limit
+printf	printf
 readfrom	%readfrom
 time	time
 writeto	%writeto
