@@ -26,6 +26,9 @@ Added infix relational operators :lt, :le, :gt, :ge, :eq and :ne.
 These all use the new comparison function %cmp, which in turn uses
 the primitive comparison function &cmp.
 
+Added a builtin printf, compiled when libffi is available. This
+is implemented by the primitive &printf.
+
 Corrected the behaviors of pushd and popd. Added dirs to display
 directory stack.
 
